tests/ui/closures/issue-109188.stderr
error[E0308]: mismatched types
  --> $DIR/issue-109188.rs:17:13
   |
LL |         let Either::One(_t) = x;
   |             ^^^^^^^^^^^^^^^   - this expression has type `()`
   |             |
   |             expected `()`, found `Either`

error[E0308]: mismatched types
  --> $DIR/issue-109188.rs:18:13
   |
LL |         let Either::Two(_t) = x;
   |             ^^^^^^^^^^^^^^^   - this expression has type `()`
   |             |
   |             expected `()`, found `Either`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
